--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 90px;
 }
 
 .logo {
@@ -11,9 +15,24 @@
   padding: 4px 32px;
 }
 
+.left-links, .right-links {
+    width: 220px;
+}
+
+.left-links{
+    margin-right: auto;
+}
+
+.right-links {
+    margin-left: auto;
+}
+
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
 }
 
 a {
