--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 img {
@@ -10,6 +14,17 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.items  {
+    display: flex;
+    justify-content: space-around;
+    gap: 40px;
+    padding: 40px;
+}
+
+.item {
+    text-align: center;
 }
 
 /* do not edit this footer */
