--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  gap: 20px;
+  padding: 20px;
 }
 
 .icon {
@@ -29,6 +32,7 @@ body {
   background: lavender;
   width: 42px;
   height: 42px;
+  min-width: 42px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -48,6 +52,20 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    font-weight: 900;
+    font-size: 20px;
 }
 
 button {
